--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Smart Fridge</h2>
                                 <p class="item-intro text-muted">Smart Refrigerator System</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/smart-fridge-app.jpg" alt="">
+                                <img class="img-responsive img-centered" src="img/portfolio/smart-fridge.png" alt="">
                                 <p>I created a database system together with Patrick Langis to monitor the contents of a refrigerator using PostgreSQL.
                                 Our databse respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end.
                                     </p>
