--- a/index.html
+++ b/index.html
@@ -299,6 +299,9 @@
                      <h4 class="service-heading"> Community Pillars</h4>
                     <h6 class="service-heading">September 2016 – Present</h6>
                     <p class="text-muted"> I organized and participated in weekly community service projects in the Ottawa area along with Chabad on Campus.   </p>
+                     <h4 class="service-heading"> Entrepreneur</h4>
+                    <h6 class="service-heading">November 2012 – April 2013</h6>
+                    <p class="text-muted"> I bought and sold refurbished Apple laptops in bulk. I marketed, created ads and dealt with bargaining client prices. I employed a team of 5 salespeople.    </p>
                 </div>
             </div>
             <div class="row text-center">
@@ -307,6 +310,7 @@
     </section>
     
     <!-- Clients Aside -->
+    <!--
     <aside class="clients">
         <div class="container">
             <div class="row">
@@ -332,7 +336,8 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> 
+--!>
 
     <!-- Contact Section -->
     <section id="contact">
