--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To My Website!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
+                
+                <div class="intro-heading">Felix Singerman</div>
+                <div class="intro-lead-in">Computer Science Student</div>
+                <a href="#about" class="page-scroll btn btn-xl">View More</a>
             </div>
         </div>
     </header>
