--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="FX9sfFnqVJjLLXV4sL8LYIAxaBcvWSeJZ7cJ0F1jjTA" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This is my personal website that I set up for fun, I hope you enjoy it. I will continue to update it. ">
     <meta name="author" content="Felix J Singerman">
