Updated About me

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4 class="subheading">Put Subtitle Here</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -132,15 +132,16 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Blah</h4>
+                                    <h4>Natural Languages</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">English</p>
+                                    <p class="text-muted">French</p>
+                                    <p class="text-muted">Hebrew</p>
                                 </div>
                             </div>
                         </li>
@@ -150,8 +151,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Blah</h4>
+                                    <h4>Travel</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -196,6 +196,9 @@
                     <p class="text-muted">
                         Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Software Engineering, Discrete Math I & II, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science 
                     </p>
+                        <p class = "text-muted">
+                        Selected Business Coursework: Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour 
+                    </p>
                 </div>
                 <div class="col-lg-12">
                     <span class="fa-stack fa-4x">
@@ -203,7 +206,8 @@
                     </span>
                     <h4 class="service-heading">Marianopolis College</h4>
                     <h6 class="service-heading">2012 - 2014</h6>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">DEC of Commerce</p>
+                    <p class="text-muted">Selected Coursework: Macroeconomics, International Business, Spanish</p>
                 </div>
                 <div class="col-lg-12">
                     <span class="fa-stack fa-4x">
@@ -211,7 +215,7 @@
                     </span>
                     <h4 class="service-heading">Herzliah High School</h4>
                     <h6 class="service-heading">2006 - 2011</h6>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Graduated with Honours. I received a full tuition scholarship to the Hebrew University of Jerusalem.</p>
                 </div>
             </div>
         </div>
@@ -536,7 +540,7 @@
                                 <h2>My Personal Website</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                                <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
+                                <p>I created this website as a personal project. I hope you enjoy!</p>
                             
                                   <strong>You can download the code for this website at</strong><a href="https://github.com/flsing/flsing.github.io"> Github.com</a>.
                                 <ul class="list-inline">
