Updated About me

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <h5 class="subheading">Programming/Scripting Languages</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Java, Python, SQL, Prolog, Scheme, GO</p>
+                                    <p class="text-muted">Java, Python, SQL, Prolog, Scheme, GO, HTML</p>
                                 </div>
                                 <h5 class="subheading">Technologies/Environment</h5>
                                  <div class="timeline-body">
@@ -132,16 +132,16 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Natural Languages</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">English</p>
-                                    <p class="text-muted">French</p>
-                                    <p class="text-muted">Hebrew</p>
+                                    <p class="text-muted"><Strong>English: </Strong>Native or bilingual proficiency</p>
+                                    <p class="text-muted"><strong>French:</strong> Professional working proficiency</p>
+                                    <p class="text-muted"><Strong>Hebrew: </Strong>Elementary proficiency</p>
                                 </div>
                             </div>
                         </li>
@@ -160,9 +160,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>The 
+                                <h4>To 
+                                    <br>The
                                     <br>Future!
-                                    <br>
                                     </h4>
                             </div>
                         </li>
@@ -194,7 +194,7 @@
                     <p class="text-muted">
                         Elected member of the Engineering Faculty Council. </p>
                     <p class="text-muted">
-                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Software Engineering, Discrete Math I & II, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science 
+                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Software Engineering, Discrete Math, Discrete Stuctures, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science 
                     </p>
                         <p class = "text-muted">
                         Selected Business Coursework: Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour 
