--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Contact me form is currently not working with the current hosting service. Sorry! </h3>
                 </div>
             </div>
             <div class="row">
