--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Put Subtitle Here</h4>
+                                    <h4>Add subtitle</h4>
+                                    
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -467,7 +467,7 @@
                                 <h2>Cook Helper Application</h2>
                                 <p class="item-intro text-muted">Munchies: What do you have in your fridge?</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/chef.png" alt="">
-                                <p>The Munchies App was created by Eyob Tilaye, Wilson Ly and me. Munchies, was created using android studio. Muchies selects and displays recipes that contain the ingredients you already have. Munchies, obtained results according to relevance (ingredients and category, or type of food).
+                                <p>The Munchies App was created by Eyob Tilaye, Wilson Ly and I. Munchies was created using android studio. Muchies selects and displays recipes that contain the ingredients you already have. Munchies obtained results according to relevance (ingredients and category, or type of food).
 </p>
                                 
                                     <strong>You can download the code</strong><a href="https://github.com/flsing/SEG2105"> here</a>.
