--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/me.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/cirlcesme.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -298,7 +298,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Volunteering & Experience</h2>
-                    <h4 class="service-heading"> Engineering faculty council</h4>
+                    <h4 class="service-heading"> Engineering Faculty Council</h4>
                     <h6 class="service-heading">April 2016 – May 2017</h6>
                     <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa.   </p>
                     
