fixed information in smart fridge

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                                 <p class="item-intro text-muted">Smart Refrigerator System</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/smart-fridge.png" alt="">
                                 <p>I created a database system together with Patrick Langis to monitor the contents of a refrigerator using PostgreSQL.
-                                Our databse respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end.
+                                Our databse respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end using HTML and CSS.
                                     </p>
                                 <p>
                                     <strong>Download the Code on github</strong><a href="https://github.com/flsing/CSI2132"> Here</a>
