--- a/index-fr.html
+++ b/index-fr.html
@@ -82,7 +82,7 @@
             <div class="intro-text">
                 
                 <div class="intro-heading">Felix Singerman</div>
-                <div class="intro-lead-in">Etudients en Informatique</div>
+                <div class="intro-lead-in">Etudient en Informatique</div>
                 <a href="#about" class="page-scroll btn btn-xl">View More</a>
             </div>
         </div>
