--- a/index-fr.html
+++ b/index-fr.html
@@ -88,7 +88,7 @@
         </div>
     </header>
 <!-- About Section -->
-    <section id="about">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
