--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Add subtitle</h4>
+                                    <h4>About Me</h4>
 
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I’ve always been extremely interested in computing and logical problem solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
                                 </div>
                             </div>
                         </li>
@@ -153,10 +153,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Travel</h4>
+                                    <h4>other interests</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                    My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work, can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learing.</p>
+                                    <p class="text-muted">
+                                    I enjoy educating myself on current events and learning about what is going on around the world. My family and friends are very important to me and make time to spend it with them.</p>
                                 </div>
                             </div>
                         </li>
@@ -194,7 +197,8 @@
                     <h6 class="service-heading">2014 - Present</h6>
                     <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.25/4.00.</p>
                     <p class="text-muted">
-                        Elected member of the Engineering Faculty Council. </p>
+                        <a  href="#other"> Elected member of the Engineering Faculty Council.</a>
+                        </p>
                     <p class="text-muted">
                         Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Software Engineering, Discrete Math, Discrete Stuctures, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
                     </p>
@@ -301,7 +305,8 @@
                     <h2 class="section-heading">Volunteering & Experience</h2>
                     <h4 class="service-heading"> Engineering Faculty Council</h4>
                     <h6 class="service-heading">April 2016 – May 2017</h6>
-                    <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. </p>
+                    <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. It’s a role I thoroughly enjoy and gives me much satisfaction as it has helped me with my communication and business skills. My hard working habits and organizational skills, help in balancing my school work, my extracurricular activities and my passion in computing.
+                    </p>
 
                     <h4 class="service-heading"> Community Pillars</h4>
                     <h6 class="service-heading">September 2016 – Present</h6>
@@ -400,8 +405,9 @@
     <footer class="bg-light-gray">
         <div class="container">
             <div class="row">
+                <p>FLSingerman@gmail.com</p>
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Felix J Singerman</span>
+                    <span class="copyright">Copyright &copy; 2017 Felix J Singerman</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -474,7 +480,7 @@
                                 <h2>Cook Helper Application</h2>
                                 <p class="item-intro text-muted">Munchies: What do you have in your fridge?</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/chef.png" alt="">
-                                <p>The Munchies App was created by Eyob Tilaye, Wilson Ly and I. Munchies was built using Android Studio.</p>
+                                <p>The Munchies App was created by Eyob Tilaye, Wilson Ly and Felix Singerman. Munchies was built using Android Studio.</p>
                                 <p> Munchies selects and displays recipes that contain ingredients you already have. Munchies obtained results according to relevance (ingredients and category, or type of food).
                                 </p>
 
@@ -511,7 +517,7 @@
                                 <h2>Circle the Dot game</h2>
                                 <p class="item-intro text-muted">Built in Java</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/circle_dot.png" alt="">
-                                <p>Eyob Tilaye and I designed our own version of the popular Circle the Dot game. We implemented the model-view-controller design pattern. We designed the application utilizing event-driven programming. We used a Breadth-First Search algorithm in order to find the shortest path. Simalar examples of the game can be found <a href="http://www.crazygames.com/game/circle-the-cat">here</a>.</p>
+                                <p>Eyob Tilaye and Felix Singerman designed our own version of the popular Circle the Dot game. We implemented the model-view-controller design pattern. We designed the application utilizing event-driven programming. We used a Breadth-First Search algorithm in order to find the shortest path. Simalar examples of the game can be found <a href="http://www.crazygames.com/game/circle-the-cat">here</a>.</p>
 
                                 <strong>You can download the code at</strong><a href="https://github.com/flsing/ITI1121"> Github.com</a>.
                                 <ul class="list-inline">
@@ -566,7 +572,7 @@
     </div>
 
     <!-- Portfolio Modal 5 -->
-<!--
+    <!--
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -597,7 +603,7 @@
 -->
 
     <!-- Portfolio Modal 6 -->
-<!--
+    <!--
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
