Added bio, fixed typos

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <span class="fa-stack fa-4x">
                         <img src="img/logos/uottawa.png" class="img-responsive img-centered" alt="">
                     </span>
-                    <h4 class="service-heading">Univeristy of Ottawa</h4>
+                    <h4 class="service-heading">University of Ottawa</h4>
                     <h6 class="service-heading">2014 - Present</h6>
                     <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.25/4.00.</p>
                     <p class="text-muted">
